--- a/Week3_Knowledge_based_1.ipynb
+++ b/Week3_Knowledge_based_1.ipynb
@@ -16,6 +16,15 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Task 1. Distance-based color segmentation of the red flower\n",
+        "## 1. Importing libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -48,32 +57,6 @@
         "\n",
         "img_lab = cv2.cvtColor(cv2.imread('ai2023/1600.png'), cv2.COLOR_BGR2LAB)\n",
         "img_lab_crop = cv2.cvtColor(cv2.imread('ai2023/1600.crop.png'), cv2.COLOR_BGR2LAB)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[22500., 23716., 24025., ..., 24649., 24649., 24025.],\n",
-              "       [24336., 24025., 24336., ..., 24336., 24025., 24649.],\n",
-              "       [24025., 24025., 23409., ..., 24025., 24649., 24025.],\n",
-              "       ...,\n",
-              "       [ 2809.,  2401.,  1600., ..., 15876., 11881.,  9216.],\n",
-              "       [ 1521.,  3600.,  4356., ..., 16384., 12100.,  8100.],\n",
-              "       [ 1681.,  3364.,  2704., ..., 14400.,  8649.,  5625.]])"
-            ]
-          },
-          "execution_count": 36,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "img_rgb[:, :, 0].astype(np.float64) ** 2"
       ]
     },
     {
@@ -146,17 +129,6 @@
         "temp = np.sqrt((img_rgb[:, :, 0].astype(np.float64) ** 2) + (img_rgb[:, :, 1].astype(np.float64) ** 2) + (img_rgb[:, :, 2].astype(np.float64) ** 2))\n",
         "plt.figure(figsize = [15, 15])\n",
         "plt.hist(temp.ravel(), bins = 100, edgecolor = 'black', color = 'b')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "X2We73iOtw3U"
-      },
-      "outputs": [],
-      "source": [
-        "# img_rgb = img_rgb / 255."
       ]
     },
     {
